--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: ruby
+script:
+  - export RAILS_ENV=test
+  - bundle exec rake db:create db:schema:load db:test:prepare
+  - bundle exec rspec
 cache: bundler
