--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,11 @@ script:
   - export RAILS_ENV=test
   - bundle exec rake db:create db:schema:load db:test:prepare
   - bundle exec rspec
+  # Preferably you will run test-reporter on branch update events. But
+  # if you setup travis to build PR updates only, you don't need to run
+  # the line below
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
+  # In the case where travis is setup to build PR updates only,
+  # uncomment the line below
+  # - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT- bundle exec rspec
 cache: bundler
